--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <p class="textingredient">
             Où sont fabriqués les produits Ipssi Eat ?
             Oui, chez Ipssi Eat  nous choisissons l'origine française dès que cela est possible. Nous travaillons même en partenariat avec près de 30 000 agriculteurs français pour vous offrir tous les jours des produits de première qualité, respectant le climat, le bien-être animal et une traçabilité optimale.</p><br><br><br>
-            <video autoplay loop>
+            <video controls loop>
                 <source src="/video/A CINEMATIC B Roll - Burger (Foodporn 2020) .mp4" type="video/mp4">
                 <source src="https://www.youtube.com/embed/HS24PywYlxg?si=HwFCnhTGdhkX_-Zk%22" type="video/webm">
                 Le texte à afficher si la vidéo ne se charge pas
